--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.highlight</groupId>
-        <artifactId>web</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
-
-    <artifactId>template-engine</artifactId>
+    <groupId>org.watertemplate</groupId>
+    <artifactId>water-template-engine</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>Highlight Template Engine</name>
+    <name>Water Template Engine</name>
     <packaging>jar</packaging>
 
     <properties>
