--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.watertemplate</groupId>
-    <artifactId>water-template-engine</artifactId>
+    <artifactId>watertemplate-engine</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>Water Template Engine</name>
     <packaging>jar</packaging>
