--- a/watertemplate-jaxrs-binding/pom.xml
+++ b/watertemplate-jaxrs-binding/pom.xml
@@ -10,29 +10,31 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>watertemplate-engine</artifactId>
+    <artifactId>watertemplate-jaxrs-binding</artifactId>
+    <name>Water Template JAX-RS Binding</name>
     <version>1.0.0-SNAPSHOT</version>
-    <name>Water Template Engine</name>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
-            <groupId>org.antlr</groupId>
-            <artifactId>ST4</artifactId>
-            <version>4.0.7</version>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>jaxrs-api</artifactId>
+            <version>3.0.6.Final</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.4</version>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
+            <groupId>org.watertemplate</groupId>
+            <artifactId>watertemplate-engine</artifactId>
+            <version>${project.parent.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
