--- a/watertemplate-example/pom.xml
+++ b/watertemplate-example/pom.xml
@@ -21,5 +21,10 @@
             <artifactId>watertemplate-engine</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+        </dependency>
     </dependencies>
 </project>
