Added example to i18n templates.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 #INTELLIJ
 .idea
 **.iml
+
+#i18n-generated-templates
+watertemplate-example/src/main/i18n-generated-templates/
+watertemplate-example/src/main/i18n-generated-templates/*
