--- a/watertemplate-engine/pom.xml
+++ b/watertemplate-engine/pom.xml
@@ -12,8 +12,24 @@
 
     <artifactId>watertemplate-engine</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>Water Template Engine</name>
     <packaging>jar</packaging>
+
+    <name>Water Template Engine</name>
+    <description>Lighweight, fast Java 8 template engine.</description>
+    <url>http://watertemplate.org</url>
+
+    <licenses>
+        <license>
+            <name>GNU General Public License, Version 3</name>
+            <url>http://www.gnu.org/licenses/gpl-3.0-standalone.html</url>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:git://github.com/tiagobento/watertemplate-engine.git</connection>
+        <developerConnection>scm:git:git@github.com:tiagobento/watertemplate-engine.git</developerConnection>
+        <url>https://github.com/tiagobento/watertemplate-engine/tree/master/watertemplate-engine</url>
+    </scm>
 
     <dependencies>
         <dependency>
