--- a/watertemplate-i18n/pom.xml
+++ b/watertemplate-i18n/pom.xml
@@ -11,9 +11,25 @@
     </parent>
 
     <artifactId>watertemplate-i18n-maven-plugin</artifactId>
-    <name>Water Template i18n Plugin</name>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
+
+    <name>Water Template i18n Plugin</name>
+    <description>Maven plugin that internationalizes your template files</description>
+    <url>http://watertemplate.org</url>
+
+    <licenses>
+        <license>
+            <name>GNU General Public License, Version 3</name>
+            <url>http://www.gnu.org/licenses/gpl-3.0-standalone.html</url>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:git://github.com/tiagobento/watertemplate-engine.git</connection>
+        <developerConnection>scm:git:git@github.com:tiagobento/watertemplate-engine.git</developerConnection>
+        <url>https://github.com/tiagobento/watertemplate-engine/tree/master/watertemplate-i18n</url>
+    </scm>
 
     <dependencies>
         <dependency>
