--- a/watertemplate-engine/pom.xml
+++ b/watertemplate-engine/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <groupId>org.watertemplate</groupId>
         <artifactId>watertemplate</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>watertemplate-engine</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>Water Template Engine</name>
