--- a/watertemplate-example/pom.xml
+++ b/watertemplate-example/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.watertemplate</groupId>
             <artifactId>watertemplate-engine</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -48,7 +48,7 @@
             <plugin>
                 <groupId>org.watertemplate</groupId>
                 <artifactId>watertemplate-i18n-maven-plugin</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>${project.version}</version>
                 <configuration>
                     <bundlesDir>${pom.basedir}/src/main/bundles</bundlesDir>
                     <baseDir>${pom.basedir}/src/main/i18n-templates</baseDir>
