Added relative path to parents in pom files of modules

--- a/watertemplate-example/pom.xml
+++ b/watertemplate-example/pom.xml
@@ -8,6 +8,7 @@
         <groupId>org.watertemplate</groupId>
         <artifactId>watertemplate</artifactId>
         <version>1.0.0</version>
+        <relativePath>..</relativePath>
     </parent>
 
     <artifactId>watertemplate-example</artifactId>
