--- a/watertemplate-example/pom.xml
+++ b/watertemplate-example/pom.xml
@@ -13,7 +13,7 @@
 
     <artifactId>watertemplate-example</artifactId>
     <version>1.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>Water Template Example</name>
     <description>Examples of applications using Water template engine</description>
@@ -39,6 +39,23 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.watertemplate</groupId>
+            <artifactId>watertemplate-jaxrs-binding</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxrs</artifactId>
+            <version>3.0.11.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-servlet-initializer</artifactId>
+            <version>3.0.11.Final</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.3.2</version>
@@ -46,6 +63,19 @@
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.3.0.M2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.watertemplate</groupId>
                 <artifactId>watertemplate-i18n-maven-plugin</artifactId>
