--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <module>watertemplate-i18n</module>
         <module>watertemplate-jaxrs-binding</module>
         <module>watertemplate-example</module>
+        <module>watertemplate-site</module>
     </modules>
 
     <build>
