--- a/watertemplate-example/pom.xml
+++ b/watertemplate-example/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>org.watertemplate</groupId>
         <artifactId>watertemplate</artifactId>
-        <version>1.2.2</version>
+        <version>1.2.3-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
     <artifactId>watertemplate-example</artifactId>
-    <version>1.2.2</version>
+    <version>1.2.3-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <name>Water Template Example</name>
