--- a/watertemplate-jaxrs-binding/pom.xml
+++ b/watertemplate-jaxrs-binding/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>org.watertemplate</groupId>
         <artifactId>watertemplate</artifactId>
-        <version>1.2.2</version>
+        <version>1.2.3-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
     <artifactId>watertemplate-jaxrs-binding</artifactId>
-    <version>1.2.2</version>
+    <version>1.2.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Water Template JAX-RS Binding</name>
