--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.watertemplate</groupId>
-    <artifactId>watertemplate</artifactId>
+    <artifactId>watertemplate</artifactId> sdasdfasd f
     <version>1.2.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
